# faas-storage-agent

./: README.en.md  README.md  build.rs
.github/workflows/: local_ci.yaml  pressure_test.yaml  remote_ci.yml  rust.yml
agent_server/: Cargo.toml
agent_server/src/: agent_server.rs  faas_storage_agent.rs  redis_sa.rs  storage_ns.rs
auth_server/: .gitignore
auth_server/iam/: README.md  db.sqlite3
auth_server/iam/iam/: settings.py  urls.py
docker/agent/: Dockerfile
docker/agent/app/: .gitignore  README.md
docs/: architecture.md  getting_start.md
language_libs/python/: requirements.txt  setup.py
language_libs/python/faas-storage-agent/: api.py  faas_storage_agent_pb2.py  faas_storage_agent_pb2_grpc.py
language_libs/python/faassa/: api.py  demo_server.py  faas_storage_agent_pb2_grpc.py
language_libs/python/tests/: test_api.py
protos/: faas_storage_agent.proto
src/: faas_storage_agent_grpc.rs  storage_ns.rs
template/python-sa/function/: handler.py  requirements.txt
tests/integration_tests/wheel/: wheel.yml
tests/integration_tests/wheel/wheel/: handler.py  requirements.txt
tests/pressure_tests/pt-1/: pt.yml
tests/pressure_tests/pt-1/pt/: handler.py  requirements.txt
yaml/agent/: agent-ds-aarch64.yaml  agent-ds-x86_64.yaml  agent-ds.yaml  agent-svc.yaml
