[package]
name = "agent_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "agent_server"
path = "src/agent_server.rs"

[dependencies]
grpcio = "0.9.0"
futures = "0.3.16"
protobuf = "2.25.0"
grpcio-sys = "0.9.0+1.38.0"
grpcio-proto = "0.9.0"
redis = "0.21.0"
base64 = "0.13.0"
reqwest = {version = "0.11.4", features = ["blocking"]}

[build-dependencies]
protoc-grpcio = "3.0.0"
